Bug 450693 - Cannot edit the Google Groupware source
Summary: Cannot edit the Google Groupware source
Status: RESOLVED FIXED
Alias: None
Product: Merkuro
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.0.0
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: Claudio Cambra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-22 07:44 UTC by RaitaroH
Modified: 2022-10-08 17:20 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RaitaroH 2022-02-22 07:44:18 UTC
SUMMARY
I cannot edit the google groupware calendar source at all. The "edit" button doesn't do anything.

STEPS TO REPRODUCE
1. open Kalendar
2. configure Kalendar
3. go to sources
4. add a new source: google groupware
5. the source appears as (not configured)
6. click the Edit button. Nothing happens. No dialog shows up, no errors seem to show up. The app doesn't crash.
7. Removing or Restarting the service also doesn't do anything.

OBSERVED RESULT
Google Groupware calendar source is unusable.

EXPECTED RESULT
The editing should work and the google groupware integration should work.

SOFTWARE/OS VERSIONS
Kalendar 1.0.0-0xneon+20.04+focal+release+build10
Operating System: KDE neon 5.24
KDE Plasma Version: 5.24.1
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3
Kernel Version: 5.13.0-30-generic (64-bit)
Graphics Platform: X11


ADDITIONAL INFORMATION
The Google groupware should work with google workspace, correct?

The following is all that is shown in the terminal.

QML debugging is enabled. Only use this in a safe environment.
qrc:/FilterHeader.qml:110:9: QML Connections: Detected function "onRowsInserted" in Connections element. This is probably intended to be a signal handler but no signal of the target matches the name.
qrc:/FilterHeader.qml:110:9: QML Connections: Detected function "onRowsRemoved" in Connections element. This is probably intended to be a signal handler but no signal of the target matches the name.
qrc:/main.qml:671:26: QML QQuickItem*: Binding loop detected for property "height"
qrc:/GeneralSettingsPage.qml:13:5: QML FormLayout (parent or ancestor of QQuickLayoutAttached): Binding loop detected for property "preferredHeight"
file:///usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/kirigami.2/templates/AbstractApplicationHeader.qml:35:5: Unable to assign SettingsPage_QMLTYPE_672 to Page_QMLTYPE_37
file:///usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/kirigami.2/templates/AbstractApplicationHeader.qml:35:5: Unable to assign SettingsPage_QMLTYPE_672 to Page_QMLTYPE_37
qrc:/SourceSettingsPage.qml:93:29: QML RowLayout: Layout: column (4) should be less than the number of columns (4)
qrc:/SourceSettingsPage.qml:93:29: QML RowLayout: Layout: column (4) should be less than the number of columns (4)
qrc:/SourceSettingsPage.qml:155: TypeError: Property 'close' of object ScrollablePage_QMLTYPE_220(0x556391b65f90) is not a function
qt.qpa.xcb: QXcbConnection: XCB error: 3 (BadWindow), sequence: 953, resource id: 12748222, major code: 40 (TranslateCoords), minor code: 0
Comment 1 Kishore Gopalakrishnan 2022-05-15 06:04:39 UTC
It works for me on a personal gmail account. However, a browser window did automatically open for me (to log in and grant access) after step 4.

kalendar 22.04.1
Operating System: Arch Linux
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.3
Kernel Version: 5.15.39-1-lts (64-bit)
Graphics Platform: X11
Comment 2 Víctor 2022-06-08 16:57:58 UTC
(In reply to RaitaroH from comment #0)
> SUMMARY
> I cannot edit the google groupware calendar source at all. The "edit" button
> doesn't do anything.
> 
> STEPS TO REPRODUCE
> 1. open Kalendar
> 2. configure Kalendar
> 3. go to sources
> 4. add a new source: google groupware
> 5. the source appears as (not configured)
> 6. click the Edit button. Nothing happens. No dialog shows up, no errors
> seem to show up. The app doesn't crash.
> 7. Removing or Restarting the service also doesn't do anything.
> 
> OBSERVED RESULT
> Google Groupware calendar source is unusable.
> 
> EXPECTED RESULT
> The editing should work and the google groupware integration should work.
> 
> SOFTWARE/OS VERSIONS
> Kalendar 1.0.0-0xneon+20.04+focal+release+build10
> Operating System: KDE neon 5.24
> KDE Plasma Version: 5.24.1
> KDE Frameworks Version: 5.91.0
> Qt Version: 5.15.3
> Kernel Version: 5.13.0-30-generic (64-bit)
> Graphics Platform: X11
> 
> 
> ADDITIONAL INFORMATION
> The Google groupware should work with google workspace, correct?
> 
> The following is all that is shown in the terminal.
> 
> QML debugging is enabled. Only use this in a safe environment.
> qrc:/FilterHeader.qml:110:9: QML Connections: Detected function
> "onRowsInserted" in Connections element. This is probably intended to be a
> signal handler but no signal of the target matches the name.
> qrc:/FilterHeader.qml:110:9: QML Connections: Detected function
> "onRowsRemoved" in Connections element. This is probably intended to be a
> signal handler but no signal of the target matches the name.
> qrc:/main.qml:671:26: QML QQuickItem*: Binding loop detected for property
> "height"
> qrc:/GeneralSettingsPage.qml:13:5: QML FormLayout (parent or ancestor of
> QQuickLayoutAttached): Binding loop detected for property "preferredHeight"
> file:///usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/kirigami.2/templates/
> AbstractApplicationHeader.qml:35:5: Unable to assign
> SettingsPage_QMLTYPE_672 to Page_QMLTYPE_37
> file:///usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/kirigami.2/templates/
> AbstractApplicationHeader.qml:35:5: Unable to assign
> SettingsPage_QMLTYPE_672 to Page_QMLTYPE_37
> qrc:/SourceSettingsPage.qml:93:29: QML RowLayout: Layout: column (4) should
> be less than the number of columns (4)
> qrc:/SourceSettingsPage.qml:93:29: QML RowLayout: Layout: column (4) should
> be less than the number of columns (4)
> qrc:/SourceSettingsPage.qml:155: TypeError: Property 'close' of object
> ScrollablePage_QMLTYPE_220(0x556391b65f90) is not a function
> qt.qpa.xcb: QXcbConnection: XCB error: 3 (BadWindow), sequence: 953,
> resource id: 12748222, major code: 40 (TranslateCoords), minor code: 0

Similar issue.,

SOFTWARE/OS VERSIONS
Operating System: KDE neon Testing Edition
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Kernel Version: 5.13.0-44-generic (64-bit)
Graphics Platform: X11
Comment 3 Lorenzo Bettini 2022-10-08 09:03:28 UTC
Same for me, and the same problem is present in Korganizer: Version 5.21.1 (22.08.1)
Comment 4 Lorenzo Bettini 2022-10-08 10:28:22 UTC
(In reply to Lorenzo Bettini from comment #3)
> Same for me, and the same problem is present in Korganizer: Version 5.21.1
> (22.08.1)

I also found the culprit: you must enable the KDE wallet subsystem in KDE settings (it's also best to log out and log in or simply restart the computer). That is required for configuring Google calendars.
Comment 5 Bug Janitor Service 2022-10-08 15:30:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/90
Comment 6 Carl Schwan 2022-10-08 17:19:01 UTC
Git commit 43ce76a80b7d9b27a8c394ca2f82392373ef2481 by Carl Schwan.
Committed on 08/10/2022 at 15:23.
Pushed by carlschwan into branch 'master'.

Handle kwallet not being enabled

If kwallet is disabled, we notify the user instead of silently failing.
This is done by ensuring that the kwallet !== null check send a signal
and that we send this signal after having connected the slots

Fix: https://invent.kde.org/pim/kalendar/-/issues/207

Signed-off-by: Carl Schwan <carl@carlschwan.eu>

M  +3    -1    resources/google-groupware/googleresource.cpp
M  +7    -0    resources/google-groupware/googlesettings.cpp
M  +1    -0    resources/google-groupware/googlesettings.h

https://invent.kde.org/pim/kdepim-runtime/commit/43ce76a80b7d9b27a8c394ca2f82392373ef2481
Comment 7 Carl Schwan 2022-10-08 17:20:54 UTC
Git commit a274642ad724d7f8172103b455c826ef3c1ce52a by Carl Schwan.
Committed on 08/10/2022 at 17:20.
Pushed by carlschwan into branch 'cherry-pick-43ce76a8'.

Handle kwallet not being enabled

If kwallet is disabled, we notify the user instead of silently failing.
This is done by ensuring that the kwallet !== null check send a signal
and that we send this signal after having connected the slots

Fix: https://invent.kde.org/pim/kalendar/-/issues/207

Signed-off-by: Carl Schwan <carl@carlschwan.eu>


(cherry picked from commit 43ce76a80b7d9b27a8c394ca2f82392373ef2481)

M  +3    -1    resources/google-groupware/googleresource.cpp
M  +7    -0    resources/google-groupware/googlesettings.cpp
M  +1    -0    resources/google-groupware/googlesettings.h

https://invent.kde.org/pim/kdepim-runtime/commit/a274642ad724d7f8172103b455c826ef3c1ce52a