Handle kwallet not being enabled

If kwallet is disabled, we notify the user instead of silently failing.
This is done by ensuring that the kwallet !== null check send a signal
and that we send this signal after having connected the slots

Fix: https://invent.kde.org/pim/kalendar/-/issues/207
BUG: 450693

Signed-off-by: Carl Schwan <carl@carlschwan.eu>